--- a/app/views/dictates/play.html.erb
+++ b/app/views/dictates/play.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div>
-  <span id="correct_answer"></span>
+  <span id="japanese"></span>
 </div>
 
 <%= button_tag "START", id: 'start', class: 'hoge' %>
