--- a/app/assets/stylesheets/dictates/play.css
+++ b/app/assets/stylesheets/dictates/play.css
@@ -1,9 +1,93 @@
+body{
+  background-color: #FAF9F7;
+  font-size: 12px;
+}
+
+body, p{
+  margin: 0px;
+  padding: 0px;
+}
+
 h1{
   font-style: normal;
   font-weight: normal;
+  padding-left: 10px;
+  font-size: 16px;
+}
+
+.sentences h3{
+  padding-left: 10px;
+  border-left: 7px solid #e16b6b;
+}
+
+.sentences_inner p{
+  height: 25px;
+  margin-left: 10px;
+  padding-left: 10px;
+  border-bottom: 1px solid #dcdcdc;
+}
+
+.sentences_inner{
+  padding-bottom: 20px;
+}
+
+#countdown{
+  float: right;
+}
+
+#header{
+  border-top: 4px solid #e16b6b;
+  background-color: #FFF;
+  border-bottom: 1px solid #dcdcdc;
 }
 
 .container{
-  width: 960px;
-  margin: 0px auto;
+  width: 1010px;
+  margin: 20px auto;
+  padding: 0px;
+}
+
+.container p{
+  font-size: 16px;
+}
+
+.container_left{
+  background-color: #FFF;
+  border: 1px solid #dcdcdc;
+  margin: 0px;
+  padding: 20px;
+  width: 620px;
+  float: left;
+}
+
+.container_right{
+  border: 1px solid #dcdcdc;
+  background-color: #FFF;
+  margin: 0px;
+  padding: 10px;
+  width: 300px;
+  float: right;
+}
+
+#footer{
+  padding: 10px 0px;
+  background-color: #e16b6b;
+  margin: 0px;
+  text-align: center;
+  color: #FFF;
+}
+
+#footer p{
+  margin: 0px;
+  padding: 0px;
+}
+
+.sentences{
+  padding-bottom: 20px;
+}
+
+.clearfix:after {
+  display: block;
+  clear: both;
+  content: "";
 }
