--- a/app/views/dictates/play.html.erb
+++ b/app/views/dictates/play.html.erb
@@ -35,7 +35,7 @@
       <div class="buttons">
         <%= button_tag "START", id: 'start', class: 'hoge' %>
         <%= button_tag "PAUSE", id: 'pause', class: 'hoge' %>
-        <%= button_tag "RESUME", id: 'resume', class: 'hoge' %>
+        <%= button_tag "CLEAR", id: 'clear', class: 'hoge' %>
       </div>
     </div>
 
