--- a/app/assets/stylesheets/dictates/play.css
+++ b/app/assets/stylesheets/dictates/play.css
@@ -1,5 +1,6 @@
 body{
   background-color: #FAF9F7;
+  font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "Meiryo", "メイリオ", "Osaka", "MS PGothic", arial, helvetica, sans-serif;
   font-size: 12px;
 }
 
